Add participants section styles to styles.css and remove inline styles from index.html

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -46,8 +46,8 @@
     </footer>
 
     <script src="app.js"></script>
-    <style>
-      .participants-section {
+  </body>
+</html>
         margin-top: 12px;
         padding: 10px;
         background: #f1f8e9;
